fixed overlapped action menu

--- a/src/components/Details/details.scss
+++ b/src/components/Details/details.scss
@@ -50,7 +50,7 @@
         }
 
         &__buttons {
-          z-index: 5;
+          z-index: 7;
           display: flex;
           align-items: center;
           align-self: flex-end;
